[project]
name = "leychile-epub"
version = "1.0.0"
description = "Generador de eBooks ePub para leyes chilenas desde la BCN"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "ebooklib>=0.18",
    "lxml>=5.0.0",
    "requests>=2.31.0",
]

[project.scripts]
leychile = "cli:main"

[project.optional-dependencies]
web = [
    "streamlit>=1.30.0",
]
